package org.fudan.asdt2023.i;

public interface ICommand {
    void execute();
}
