package org.fudan.asdt2023.modules.disk.command;


import org.fudan.asdt2023.main.MarkdownEditor;
import org.fudan.asdt2023.modules.disk.command.i.DiskCommand;

public class SaveCommand extends DiskCommand {
    public SaveCommand(MarkdownEditor editor) {
        super(editor);
    }

    @Override
    public void execute() {
    }
}
