package org.fudan.asdt2023.modules.log.command;

import org.fudan.asdt2023.modules.log.LogManager;
import org.fudan.asdt2023.modules.log.command.i.LogCommand;

public class HistoryCommand extends LogCommand {

    public HistoryCommand(LogManager context) {
        super(context);
    }

    @Override
    public void execute() {

    }
}
