package org.fudan.asdt2023.modules.undoredo.command;

public class RedoCommand {
}
