package org.fudan.asdt2023.modules.undoredo.command.i;

public class UndoRedoCommand {
}
